; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_l2.c_qed_sp_vport_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_l2.c_qed_sp_vport_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_hwfn = type { i32 }
%struct.qed_sp_vport_start_params = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qed_hwfn*, %struct.qed_sp_vport_start_params*)* @qed_sp_vport_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qed_sp_vport_start(%struct.qed_hwfn* %0, %struct.qed_sp_vport_start_params* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.qed_hwfn*, align 8
  %5 = alloca %struct.qed_sp_vport_start_params*, align 8
  store %struct.qed_hwfn* %0, %struct.qed_hwfn** %4, align 8
  store %struct.qed_sp_vport_start_params* %1, %struct.qed_sp_vport_start_params** %5, align 8
  %6 = load %struct.qed_hwfn*, %struct.qed_hwfn** %4, align 8
  %7 = getelementptr inbounds %struct.qed_hwfn, %struct.qed_hwfn* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @IS_VF(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %32

11:                                               ; preds = %2
  %12 = load %struct.qed_hwfn*, %struct.qed_hwfn** %4, align 8
  %13 = load %struct.qed_sp_vport_start_params*, %struct.qed_sp_vport_start_params** %5, align 8
  %14 = getelementptr inbounds %struct.qed_sp_vport_start_params, %struct.qed_sp_vport_start_params* %13, i32 0, i32 5
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.qed_sp_vport_start_params*, %struct.qed_sp_vport_start_params** %5, align 8
  %17 = getelementptr inbounds %struct.qed_sp_vport_start_params, %struct.qed_sp_vport_start_params* %16, i32 0, i32 4
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.qed_sp_vport_start_params*, %struct.qed_sp_vport_start_params** %5, align 8
  %20 = getelementptr inbounds %struct.qed_sp_vport_start_params, %struct.qed_sp_vport_start_params* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.qed_sp_vport_start_params*, %struct.qed_sp_vport_start_params** %5, align 8
  %23 = getelementptr inbounds %struct.qed_sp_vport_start_params, %struct.qed_sp_vport_start_params* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.qed_sp_vport_start_params*, %struct.qed_sp_vport_start_params** %5, align 8
  %26 = getelementptr inbounds %struct.qed_sp_vport_start_params, %struct.qed_sp_vport_start_params* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.qed_sp_vport_start_params*, %struct.qed_sp_vport_start_params** %5, align 8
  %29 = getelementptr inbounds %struct.qed_sp_vport_start_params, %struct.qed_sp_vport_start_params* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @qed_vf_pf_vport_start(%struct.qed_hwfn* %12, i32 %15, i32 %18, i32 %21, i32 %24, i32 %27, i32 %30)
  store i32 %31, i32* %3, align 4
  br label %36

32:                                               ; preds = %2
  %33 = load %struct.qed_hwfn*, %struct.qed_hwfn** %4, align 8
  %34 = load %struct.qed_sp_vport_start_params*, %struct.qed_sp_vport_start_params** %5, align 8
  %35 = call i32 @qed_sp_eth_vport_start(%struct.qed_hwfn* %33, %struct.qed_sp_vport_start_params* %34)
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %32, %11
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @IS_VF(i32) #1

declare dso_local i32 @qed_vf_pf_vport_start(%struct.qed_hwfn*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @qed_sp_eth_vport_start(%struct.qed_hwfn*, %struct.qed_sp_vport_start_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
